[gd_scene load_steps=6 format=1]

[ext_resource path="res://interface/textbox/origemTextbox.gd" type="Script" id=1]
[ext_resource path="res://Text Interface Engine/text_interface_engine.scn" type="PackedScene" id=2]
[ext_resource path="res://interface/textbox/controlaTextbox.gd" type="Script" id=3]
[ext_resource path="res://interface/textbox/Narrador/narrativa.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/textbox/Ego/egoTexto.tscn" type="PackedScene" id=5]

[node name="textBox" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 600.0
margin/bottom = 440.0
script/script = ExtResource( 1 )
origemTexto = ""
tipoTexto = ""
emocaoTexto = "normal"
variacaoTexto = ""

[node name="fundo" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 600.0
margin/bottom = 440.0
stretch_mode = 0

[node name="areaSimbolo" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 190.0
margin/top = 20.0
margin/right = 580.0
margin/bottom = 170.0

[node name="nome" type="Label" parent="areaSimbolo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 115.0
margin/top = 51.0
margin/right = 264.0
margin/bottom = 99.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="fundo" type="Sprite" parent="areaSimbolo"]

[node name="areaFace" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 20.0
margin/right = 170.0
margin/bottom = 170.0

[node name="Sprite" type="Sprite" parent="areaFace"]

centered = false

[node name="Conteudo" type="Control" parent="."]

rect/min_size = Vector2( 560, 230 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 190.0
margin/right = 40.0
margin/bottom = 380.0

[node name="text_interface_engine" parent="Conteudo" instance=ExtResource( 2 )]

margin/left = 0.0
margin/top = 0.0
margin/right = 560.0
margin/bottom = 230.0

[node name="controlaTextbox" type="Control" parent="Conteudo"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 560.0
margin/bottom = 230.0
script/script = ExtResource( 3 )
escrevendo = false

[node name="narrativa" parent="Conteudo" instance=ExtResource( 4 )]

margin/right = 560.0
margin/bottom = 230.0

[node name="egoTexto" parent="Conteudo" instance=ExtResource( 5 )]


